--- a/templates/login/login.html
+++ b/templates/login/login.html
@@ -108,7 +108,7 @@
             {% csrf_token %}
             <input class="email" type="email" name="email" id="email" placeholder="Input your email..." required>
             <input class="password" type="password" name="password" id="password" placeholder="Input your password..." required>
-            <button><a href="{% url 'login' %}">Login</a></button>
+            <button href="{% url 'login' %}">Login</button>
         </form>
     </div>
 </body>
