--- a/templates/recents/admin_recents.html
+++ b/templates/recents/admin_recents.html
@@ -3,9 +3,9 @@
 <html>
     <head>
         <link rel="stylesheet" href="{% static 'home/recentstyle.css' %}">
-        <title>RECENTS</title>
+        <title>ADMIN RECENTS</title>
     </head>
-    <h1>RECENTS</h1>
+    <h1>ADMIN RECENTS</h1>
     <body>
 
     </body>
