--- a/templates/unreturned/admin_unreturned.html
+++ b/templates/unreturned/admin_unreturned.html
@@ -3,9 +3,9 @@
 <html>
     <head>
         <link rel="stylesheet" href="{% static 'home/unreturnedstyle.css' %}">
-        <title>UNRETURNED</title>
+        <title>ADMIN UNRETURNED</title>
     </head>
-    <h1>UNRETURNED</h1>
+    <h1>ADMIN UNRETURNED</h1>
     <body>
 
     </body>
