--- a/templates/home/admin_home.html
+++ b/templates/home/admin_home.html
@@ -3,9 +3,9 @@
 <html>
     <head>
         <link rel="stylesheet" href="{% static 'home/homestyle.css' %}">
-        <title>FACULTY HOME</title>
+        <title>ADMIN HOME</title>
     </head>
-    <h1>FACULTY HOME</h1>
+    <h1>ADMIN HOME</h1>
     <body>
 
     </body>
