--- a/templates/login/login.html
+++ b/templates/login/login.html
@@ -1,6 +1,8 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="{% static 'home/loginstyle.css' %}">
         <title>LOGIN</title>
         {% for message in messages %}
         <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
