Added navigation to different tabs

--- a/templates/login/login.html
+++ b/templates/login/login.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="{% static 'home/loginstyle.css' %}">
+        <link rel="stylesheet" href="{% static 'login/loginstyle.css' %}">
         <title>LOGIN</title>
         {% for message in messages %}
         <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
