--- a/templates/userprofile/admin_userprofile.html
+++ b/templates/userprofile/admin_userprofile.html
@@ -2,10 +2,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="{% static 'home/homestyle.css' %}">
-        <title>ADMIN HOME</title>
+        <link rel="stylesheet" href="{% static 'userprofile/userprofile.css' %}">
+        <title>ADMIN USER PROFILE</title>
     </head>
-    <h1>ADMIN HOME</h1>
+    <h1>ADMIN USER PROFILE</h1>
     <body>
         <button><a href="{% url 'admin_home' %}">Home</a></button>
         <button><a href="{% url 'admin_recents' %}">Recents</a></button>
