--- a/templates/home/guest_home.html
+++ b/templates/home/guest_home.html
@@ -7,6 +7,7 @@
     </head>
     <h1>GUEST HOME</h1>
     <body>
-
+        <button><a href="{% url 'home' %}">Home</a></button>
+        <button><a href="{% url 'logout' %}">Logout</a></button>
     </body>
 </html>
