--- a/templates/members/members.html
+++ b/templates/members/members.html
@@ -2,11 +2,16 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="{% static 'home/memberstyle.css' %}">
+        <link rel="stylesheet" href="{% static 'members/memberstyle.css' %}">
         <title>MEMBERS</title>
     </head>
     <h1>MEMBERS</h1>
     <body>
-
+        <button><a href="{% url 'admin_home' %}">Home</a></button>
+        <button><a href="{% url 'admin_recents' %}">Recents</a></button>
+        <button><a href="{% url 'admin_unreturned' %}">Unreturned</a></button>
+        <button><a href="{% url 'members' %}">Members</a></button>
+        <button><a href="{% url 'admin_userprofile' %}">Account</a></button>
+        <button><a href="{% url 'logout' %}">Logout</a></button>
     </body>
 </html>
