--- a/templates/recents/recents.html
+++ b/templates/recents/recents.html
@@ -2,11 +2,16 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="{% static 'home/recentstyle.css' %}">
+        <link rel="stylesheet" href="{% static 'recents/recentstyle.css' %}">
         <title>RECENTS</title>
     </head>
     <h1>RECENTS</h1>
     <body>
-
+        <button><a href="{% url 'home' %}">Home</a></button>
+        <button><a href="{% url 'recents' %}">Recents</a></button>
+        <button><a href="{% url 'show_unreturned_items' %}">Unreturned</a></button>
+        <button><a href="{% url 'notification' %}">Notification</a></button>
+        <button><a href="{% url 'userprofile' %}">Account</a></button>
+        <button><a href="{% url 'logout' %}">Logout</a></button>
     </body>
 </html>
