--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -7,11 +7,21 @@
     </head>
     <h1>FACULTY HOME</h1>
     <body>
-        <button><a href="{% url 'home' %}">Home</a></button>
-        <button><a href="{% url 'recents' %}">Recents</a></button>
-        <button><a href="{% url 'show_unreturned_items' %}">Unreturned</a></button>
-        <button><a href="{% url 'notification' %}">Notification</a></button>
-        <button><a href="{% url 'userprofile' %}">Account</a></button>
-        <button><a href="{% url 'logout' %}">Logout</a></button>
+
+     <form method="get" action="{% url 'home' %}">
+        <input type="text" name="q" placeholder="Search by name,id,category" value="{{ query }}">
+        <input type="submit" value="Search">
+    </form>
+
+    <button><a href="{% url 'home' %}">Home</a></button>
+    <button><a href="{% url 'recents' %}">Recents</a></button>
+    <button><a href="{% url 'show_unreturned_items' %}">Unreturned</a></button>
+    <button><a href="{% url 'notification' %}">Notification</a></button>
+    <button><a href="{% url 'userprofile' %}">Account</a></button>
+    <button><a href="{% url 'logout' %}">Logout</a></button>
+ 
+    {% include 'home/result_list.html' %}
+      
+        
     </body>
 </html>
