Added category function to view items in inventory

--- a/static/home/homestyle.css
+++ b/static/home/homestyle.css
@@ -99,3 +99,27 @@ input, select {
 /*
 Start coding here
 */
+
+#cleaning {
+    display: none;
+}
+
+#gadget {
+    display: none;
+}
+
+#furniture {
+    display: none;
+}
+
+#room {
+    display: none;
+}
+
+#dean {
+    display: none;
+}
+
+h1 {
+    color: red;
+}
