--- a/templates/unreturned/unreturned.html
+++ b/templates/unreturned/unreturned.html
@@ -16,7 +16,7 @@
         <button><a href="{% url 'logout' %}">Logout</a></button>
 
 
-
+        <!-- template for the items -->
         <div id="wrapper">
             <div id="left">left</div>
             <div id="right">
@@ -27,6 +27,7 @@
                 <p id="item_quantity">Item Quantity: </p>
             </div>
         </div>
+        <!-- template for the items -->
 
         {% block content %}
             <h1>Unreturned Items</h1>
