--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -37,20 +37,19 @@
                     <button class="item_button" data-item-target="{{ item.item_id }}" data-item-type="cleaning">{{ item.item_name }}</button>
                 </div>
             {% endfor %}
-            <div class="item_information" id="itemInformation">
-                <div class="item_header" id="item_header">
+            <div class="item_information" id="cleaning_information">
+                <div class="item_header" id="cleaning_header">
 
                     <button data-close-button class="close_button">&times;</button>                          
                 </div>
 
-                <div class="item_body" id="item_body">
+                <div class="item_body" id="cleaning_body">
 
                 </div>
                 <div class="item_form" id="item_form">
 
                 </div>
             </div>
-            <div id="overlay"></div>
             <button id="back_category" onclick="backCategories()">Back</button>
         </div>
 
@@ -64,20 +63,19 @@
                     <button class="item_button" data-item-target="{{ item.item_id }}" data-item-type="gadget">{{ item.item_name }}</button>
                 </div>
             {% endfor %}
-            <div class="item_information" id="itemInformation">
-                <div class="item_header" id="item_header">
+            <div class="item_information" id="gadget_information">
+                <div class="item_header" id="gadget_header">
 
                     <button data-close-button class="close_button">&times;</button>                          
                 </div>
 
-                <div class="item_body" id="item_body">
+                <div class="item_body" id="gadget_body">
 
                 </div>
                 <div class="item_form" id="item_form">
 
                 </div>
             </div>
-            <div id="overlay"></div>
             <button id="back_category" onclick="backCategories()">Back</button>
         </div>
 
@@ -91,20 +89,19 @@
                     <button class="item_button" data-item-target="{{ item.item_id }}" data-item-type="furniture">{{ item.item_name }}</button>
                 </div>
             {% endfor %}
-            <div class="item_information" id="itemInformation">
-                <div class="item_header" id="item_header">
+            <div class="item_information" id="furniture_information">
+                <div class="item_header" id="furniture_header">
 
                     <button data-close-button class="close_button">&times;</button>                          
                 </div>
 
-                <div class="item_body" id="item_body">
+                <div class="item_body" id="furniture_body">
 
                 </div>
                 <div class="item_form" id="item_form">
 
                 </div>
             </div>
-            <div id="overlay"></div>
             <button id="back_category" onclick="backCategories()">Back</button>
         </div>
 
@@ -118,20 +115,19 @@
                     <button class="item_button" data-item-target="{{ item.item_id }}" data-item-type="room">{{ item.item_name }}</button>
                 </div>
             {% endfor %}
-            <div class="item_information" id="itemInformation">
-                <div class="item_header" id="item_header">
+            <div class="item_information" id="room_information">
+                <div class="item_header" id="room_header">
 
                     <button data-close-button class="close_button">&times;</button>                          
                 </div>
 
-                <div class="item_body" id="item_body">
+                <div class="item_body" id="room_body">
 
                 </div>
                 <div class="item_form" id="item_form">
 
                 </div>
             </div>
-            <div id="overlay"></div>
             <button id="back_category" onclick="backCategories()">Back</button>
         </div>
 
@@ -145,20 +141,19 @@
                     <button class="item_button" data-item-target="{{ item.item_id }}" data-item-type="dean">{{ item.item_name }}</button>
                 </div>
             {% endfor %}
-            <div class="item_information" id="itemInformation">
-                <div class="item_header" id="item_header">
+            <div class="item_information" id="dean_information">
+                <div class="item_header" id="dean_header">
 
                     <button data-close-button class="close_button">&times;</button>                          
                 </div>
 
-                <div class="item_body" id="item_body">
+                <div class="item_body" id="dean_body">
 
                 </div>
                 <div class="item_form" id="item_form">
 
                 </div>
             </div>
-            <div id="overlay"></div>
             <button id="back_category" onclick="backCategories()">Back</button>
         </div>
 
