--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -14,7 +14,7 @@
       <img src="Image/LSPU.png" alt="Logo">
     </div>
     <div class="search-bar">
-      <input type="text" class="search-input" placeholder="Cleaning Materials...">
+      <input type="text" class="search-input" placeholder="Search...">
       <i class="fas fa-search"></i>
     </div>
     <div class="logo1">
