Updated show item feature

--- a/templates/home/borrow_form.html
+++ b/templates/home/borrow_form.html
@@ -3,9 +3,7 @@
     {{ borrow_form.item_quantity }}
     {{ borrow_form.item_date_borrowed }}
     {{ borrow_form.item_date_returned }}
-    {{ borrow_form.item_id }}
-    {{ borrow_form.item_name }}
-    {{ borrow_form.item_photo }}
+    {{ borrow_form.item_stock }}
 
     <input type="submit" value="Submit">
 </form>
