--- a/static/unreturned/unreturned_item_box.css
+++ b/static/unreturned/unreturned_item_box.css
@@ -1,39 +1,1 @@
-/* for checking */
-* {
-    outline: dashed 1px red;
-    font-family: Arial, Helvetica, sans-serif;
-}
-/* for checking */
-
-#wrapper {
-    width: 100%;
-    display: flex;
-    outline: dashed 1px red;
-}
-#left {
-    width: 20%;
-    outline: dashed 1px red;
-}
-#right {
-    width: 80%;
-    outline: dashed 1px red;
-}
-
-#item_name {
-    font-size: 22px;
-    font-weight: 500;
-    margin: 15px 0px;
-}
-#item_details {
-    font-size: 12px;
-}
-#item_quantity {
-    font-size: 18px;
-    font-weight: 500;
-    margin: 0px 0px 15px 0px;
-    text-align: right;
-}
-
-.need_padding {
-    padding: 5px 0px;
-}
+/* nothing for now */
