--- a/templates/unreturned/unreturned.html
+++ b/templates/unreturned/unreturned.html
@@ -8,8 +8,7 @@
 
     <style>
         * {
-            font-family: Arial, Helvetica, sans-serif;
-            background-color: gray;
+            font-family: Arial, Helvetica, sans-serif; background-color: gray;
         }
         body {
             margin: 15px;
@@ -102,23 +101,38 @@
 
             <!-- test block code -->
             <!-- template for the items -->
-            {% for item in unreturned_items %}
+            <!-- {% for item in unreturned_items %} -->
             <div id="wrapper">
 
                 <div id="top">
                     <div id="left">
-                        {% if item.item_photo %}
-                            <img src="{{ item.item_photo.url }}" alt="" class="inventory_item" width="100%" height="100%" object-fit="contain;">
-                        {% endif %}
+                        <!-- {% if item.item_photo %}
+                            <img src="{{ item.item_photo.url }}" alt="" class="inventory_item" width="100%" height="100%" object-fit="contain">
+                        {% endif %} -->
+
+                        <!-- test image -->
+                        <img src="" alt="" width="100%" height="100%" object-fit="contain">
+                        <!-- test image -->
+
                     </div>
                     <div id="right">
-                        <p id="item_name">{{item.item_name}}</p>
+                        <!-- <p id="item_name">{{item.item_name}}</p>
                         <p id="item_details">
                             Time Borrowed: {{item.item_date_borrowed}}<br />
                             Time Returned: {{item.item_days_not_returned}}<br />
                             Borrower: {{item.item_borrower}}
                         </p>
-                        <p id="item_quantity">Item Quantity: {{item.item_quantity}}</p>
+                        <p id="item_quantity">Item Quantity: {{item.item_quantity}}</p> -->
+
+                        <!-- test text -->
+                        <p id="item_name"></p>
+                        <p id="item_details">
+                            Time Borrowed: <br />
+                            Time Returned: <br />
+                            Borrower:
+                        </p>
+                        <p id="item_quantity">Item Quantity: </p>
+                        <!-- test text -->
                     </div>
                 </div>
                 <div id="bottom">
@@ -128,7 +142,7 @@
                 </div>
 
             </div>
-            {% endfor %}
+            <!-- {% endfor %} -->
             <!-- template for the items -->
         </div>
 
